# Factyle

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml  tiny_validate.yaml
docs/: EXPERIMENT_SETUP.md  REPRODUCE.md  SUBMISSION_MANIFEST.md
scripts/: ablation_ensemble_analysis.py  build_full_feature_cache.py  build_teacher_probs_v10.py  eval_ablation_checkpoint.py  evaluate_ensemble_v10_detailed.py  evaluate_threshold_ensemble.py  train_from_cache.py  validate_modules.py  verify_cache.py
src/factyle/clients/: baidu_search.py  qwen_client.py  web_fetcher.py
src/factyle/features/: text.py
src/factyle/models/: torch_models.py
src/factyle/retrieval/: entity_extractor.py  style_rewriter.py
src/factyle/utils/: config.py
